task01/styles.css
/*Roboto font from google fonts*/
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');

/*Animations*/

@keyframes reveal {
  0% {
    opacity: 0%
  }

  50% {
    opacity: 0%;
  }

  100% {
    opacity: 100%
  }
}

tt {
  font-size: 15px;
}

body {

  font-family: 'Roboto', sans-serif;
}

/* Navigation Bar */

.logo {
  width: 60px;
  height: 60px;
  align-self: left;
  position: fixed;
  left: -5px;
  top: -1px;
  animation-name: reveal;
  animation-delay: 0s;
  animation-duration: 1s;
  animation-timing-function: ease-in;
}

.logo:hover {
  transform: scale(1.2);
  transition: 0.3s;
  transform: rotateY(360deg);
  transition-duration: 2s;
}

.Roboto-font {
  font-family: 'Roboto';
}


.text-center {
  display: flex;
  justify-content: center;
}

.center {
  display: flex;
  align-content: flex-start;
}

.nav-list {
  list-style-type: none;
}

.nav-1,
.nav-2 {
  margin-bottom: -15px;
  animation-name: reveal;
  animation-delay: 0s;
  animation-duration: 2s;
  animation-timing-function: ease-in;
}

.navbar {
  background-color: rgb(78, 89, 140);
  width: 100%;
  height: 25px;
  position: fixed;
  top: -2px;
  padding-top: 15px;
  padding-right: 42px;
  padding-bottom: 16px;
  margin-left: 40px;
  animation-name: reveal;
  animation-delay: 0s;
  animation-duration: 2s;
  animation-timing-function: ease-in;
}

.home {
  text-decoration: none;
  color: white;
  padding: 5px 2px 2px 2px;
  font-size: 15px;
  float: right;
  margin-right: 50px;
}

.home:hover {
  color: black;
  transform: scale(1.1);
  transition: 0.3s;
  background-color: rgb(249, 199, 132);
  border-width: 0px;
  border-radius: 5px;
  vertical-align: middle;
  padding: 5px 8px 5px 8px;

}

.html {
  text-decoration: none;
  color: white;
  font-size: 15px;
  padding: 5px 10px 2px 2px;
  float: right;
  margin-right: 75px;
}

.html:hover {
  color: black;
  background-color: rgb(249, 199, 132);
  border-width: 0px;
  border-radius: 5px;
  padding: 5px 8px 5px 8px;
  transform: scale(1.1);
  vertical-align: middle;
  transition: 0.3s;
}

.html:active {
  color: black;
  background-color: rgb(249, 199, 132);
  border-width: 0px;
  border-radius: 5px;
  padding: 5px 8px 5px 8px;
  transform: scale(1.1);
  vertical-align: middle;
  transition: 0.3s;
}

/* First page content */

.intro {
  display: flex;
  align-items: center;
  width: 100%;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-evenly;
}

.home-h {
  font-size: 50px;
  font-weight: lighter;
}

.home-p {
  width: 43%;
  margin-top: 42px;
  animation-name: reveal;
  animation-delay: 0s;
  animation-duration: 3s;
  animation-timing-function: ease-in;
}

.hero {
  width: 540px;
  margin-top: 92px;
  animation-name: reveal;
  animation-delay: 0s;
  animation-duration: 4s;
  animation-timing-function: ease-in;
}

.hero img {
  max-width: 100%;
}

.tags {
  background-color: rgb(238, 238, 238);
}

.wh-button {
  background-color: rgb(252, 175, 88);
  border-width: 0px;
  width: 123px;
  height: 40px;
  border-radius: 10px;
  margin-top: 25px;
}

.wh-button:hover {
  cursor: pointer;
  background-color: rgb(78, 89, 140);
  color: white;
  transition: 0.5s;
  transform: scale(1.1);
}

/* First page Table */
.sample-table{
  font-size: 30px;
  text-align: left;
  font-weight:normal;
}

.t-description{
  text-align: left;
}

.timetable{
  border-collapse: collapse ;
  margin: 0 auto;
  border-bottom: 2px solid;
  box-shadow: 0px 0px 15px 5px #DDDDDD;
  align-self: start;
  min-width: 400px;
  box-shadow: 0 0 20px rgba(0, 0, 0, 0.25);
  animation-name: reveal;
  animation-delay: 0s;
  animation-duration: 5s;
  animation-timing-function: ease-in;
}

.timetable caption{
  margin: 20px 0px
}

th{
  background-color: rgb(78, 89, 140);
  color: white;
  text-align: left;
  padding-left: 20px;
  padding-right: 20px;
  height: 45px;
}

td {
  text-align: left;
  padding: 10px;
}

.timetable, tr:last-of-type {
  border-bottom: 3px solid rgb(78, 89, 140);
}

.active-row{
  
  color: rgb(78, 89, 140);
  font-weight: bold;
}

.interval{
  text-align: center;
}

.tableData-l{
  padding: 15px 10px;
}

.tableData-l ul{
  padding: 0px 20px;
}

tr:nth-child(even){
  background-color: #dadada;
}

/* .table {
  margin: 0 60px 50px 60px;
}

.sample-table {
  font-size: 30px;
  text-align: left;
  font-weight: normal;
}

.t-description {
  text-align: left;
}

.timetable {
  border-bottom: 2px solid;
  font-size: 15px;
   hello
  border-bottom-color: rgb(78, 89, 140);
  box-shadow: 0px 0px 15px 5px #DDDDDD;
  animation-name: reveal;
  animation-delay: 0s;
  animation-duration: 5s;
  animation-timing-function: ease-in;
}

th {
  background-color: rgb(78, 89, 140);
  color: white;
  height: 45px;
}

.th-1 {
  padding-left: 10px;
  width: 180px;
}

.th-2 {
  padding-left: 10px;
  width: 225px;
}

.th-3 {
  padding-left: 10px;
  width: 210px;
}

.th-4 {
  padding-left: 10px;
  width: 245px;
}

.th-5 {
  padding-left: 10px;
  width: 180px;
  vertical-align: middle;
}

.t-data {
  padding-left: 10px;
  border-left: 0.5px solid;
  border-color: rgb(238, 238, 238);
}

.t-data-l {
  padding-top: 20px;
  padding-left: 10px;
}

.interval {
  text-align: center;
  color: rgb(78, 89, 140);
}

.tr-2,
.tr-4 {
  background-color: rgb(238, 238, 238);
}

.tr-3 {
  color: rgb(78, 89, 140);
}

.row {
  height: 50px;
} */

/* Page two Content */

.why-html {
  display: flex;
  margin: 54px 0;
  flex-direction: row;
  align-items: center;
  flex-wrap: wrap;
  justify-content: space-evenly;
}

.app {
  width: 480px;
  animation-name: reveal;
  animation-delay: 0s;
  animation-duration: 2s;
  animation-timing-function: ease-in;
}

.app img {
  max-width: 100%;
}

.paragraph {
  width: 40%;
  animation-name: reveal;
  animation-delay: 0s;
  animation-duration: 3s;
  animation-timing-function: ease-in;
}

.paragraph tt {
  font-size: 18px;
}

.paragraph h5 {
  display: inline;
}

.p-html {
  text-align: left;
}

.p-html tt {
  font-size: 15px;
}

.p-css {
  text-align: justify;
}

.p-red {
  color: red;
}

.p-block {
  width: 200px;
  border-radius: 10px;
  padding: 3px;
}

.p-js {

  margin-left: 146px;
  text-align: right;
}

/* Page Two Form */

.form {
  margin-left: 40%;
  margin-right: 20%;
  animation-name: reveal;
  animation-delay: 0s;
  animation-duration: 4s;
  animation-timing-function: ease-in;
}

.form-caption {
  text-align: center;
  width: 50%;
  font-weight: normal;
  font-size: 25px;
}

#name {
  margin-left: 100px;
  width: 250px;
  height: 30px;
  border: 1px rgb(221, 221, 221) solid;
}

#eMail {
  margin-left: 103px;
  width: 250px;
  height: 30px;
  border: 1px rgb(221, 221, 221) solid;
}

#rd-1 {
  margin-left: 155px;
}

#rd-2 {
  margin-left: 60px;
}

#rd-1:hover,
#rd-2:hover {
  cursor: pointer;
}

.rd-text:hover {
  cursor: default;
}

#year {
  width: 255px;
  height: 30px;
  margin-left: 37px;
}

#ch-1 {
  margin-left: 85px;
}

#ch-2,
#ch-3 {
  margin-left: 40px;
}

#ch-1:hover,
#ch-2:hover,
#ch-3:hover {
  cursor: pointer;
}

.ch-text:hover {
  cursor: default;
}

#feedback {
  margin-left: 70px;
  border-radius: 5px;
  border: 2px rgb(238, 238, 238) solid;
  resize: none;
}

.submit {
  height: 40px;
  width: 90px;
  background-color: rgb(252, 175, 88);
  border-width: 0px;
  border-radius: 10px;
  font-weight: bold;
  text-align: center;
  animation-name: reveal;
  animation-delay: 0s;
  animation-duration: 5s;
  animation-timing-function: ease-in;
}

.submit:hover {
  background-color: rgb(255, 140, 66);
  transition: 0.5s;
  transform: scale(1.1);
  transition: 0.9s;
  font-weight: bolder;
  cursor: pointer;
}

.s-r {
  padding-left: 200px;
}

.reset {
  height: 40px;
  width: 90px;
  border-width: 0px;
  border-radius: 10px;
  margin-left: 30px;
  font-weight: bold;
  text-align: center;
  animation-name: reveal;
  animation-delay: 0s;
  animation-duration: 5s;
  animation-timing-function: ease-in;
}

.reset:hover {
  background-color: rgb(221, 221, 221);
  transition: 0.5s;
  transform: scale(1.1);
  transition: 0.9s;
  font-weight: bolder;
  cursor: pointer;
}

